RDS-OPS: experiment with new base image